# header-guardian

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  osv-audit.json  pyproject.toml  requirements.txt
.ci/: heartbeat  preflight.zsh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
scripts/: protect_main_from_commit.sh  purge_runs.sh
src/header_guardian/: __init__.py  cli.py  core.py  headers.py
tests/: test_header_core.py  test_header_multi.py  test_headers.py  test_sanity.py
